tests/fixtures/invalid/min_none_float.py
# Cannot call min() with None, Float
x = min(None, 1.0)
